# clutter

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
crates/clutter-analyzer/: Cargo.toml
crates/clutter-cli/: Cargo.toml
crates/clutter-cli/src/: args.rs  error_reporter.rs  lib.rs  main.rs  tests.rs  tokens_discovery.rs
crates/clutter-cli/tests/: integration.rs
crates/clutter-codegen/: Cargo.toml
crates/clutter-codegen/src/: css.rs  lib.rs  tests.rs  vue.rs
crates/clutter-codegen/tests/: integration.rs
crates/clutter-lexer/: Cargo.toml
design-doc/: clutter-block-01-lexer.md  clutter-block-02-parser.md  clutter-block-03-semantic-analyzer.md  clutter-block-04-code-generator.md  clutter-block-05-runtime.md  clutter-block-06-cli.md  clutter-block4a.md  clutter-poc-blocks.md  clutter-spec-compiler.md  clutter-stack.md
design_doc/: clutter-block-01-lexer.md  clutter-block-02-parser.md  clutter-block-03-semantic-analyzer.md  clutter-block-04-code-generator.md  clutter-block-05-runtime.md  clutter-block-06-cli.md  clutter-poc-blocks.md  clutter-spec-compiler.md  clutter-stack.md
docs/: language.md
fixtures/: clt107_complex_expr.clutter  complex.clutter  if_else.clutter  invalid_token.clutter  logic_block.clutter  nesting.clutter  orphan_else.clutter  props.clutter  simple_component.clutter  unsafe_block.clutter  unsafe_value.clutter  valid.clutter
scripts/: setup.sh.template
todo/: 00-backlog.md  01-lexer.md  02-parser.md  03-analyzer.md  04a-format-migration.md  04b-codegen.md  05-cli.md
(+27 files in other folders)
