[package]
name = "clutter-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "clutter"
path = "src/main.rs"

[dependencies]
clutter-lexer    = { path = "../clutter-lexer" }
clutter-parser   = { path = "../clutter-parser" }
clutter-analyzer = { path = "../clutter-analyzer" }
clutter-codegen  = { path = "../clutter-codegen" }
clutter-runtime  = { path = "../clutter-runtime" }
clap = { version = "4", features = ["derive"] }
miette = { version = "5", features = ["fancy"] }
